--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SampleProjectCollection">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".DiaryActivity"
+            android:theme="@style/Theme.SampleProjectCollection.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.SampleProjectCollection.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
